@@ -5,6 +5,9 @@
 	* Rename and reorganize module locallang files in mod directory.
 	* Add module csh file locallang_csh_web_txdirectmailM1.xml
 	* Initialize module csh file and test configuration with a few labels.
+	* Add item 'dmail' on column 'module' of table 'pages' in ext_tables.php (pending removal from typo3/sysext/cms/ext_tables.php)
+	* Add methods find_MIDfromReturnPath and find_XTypo3MID in mod/class.readmail.php (pending removal from t3lib/class.t3lib_readmail.php)
+	* Update to manual and contextual help.
 
 2007-03-04 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Add copy of the static templates in the manual.
